# optax

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  DION_IMPLEMENTATION.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  fetch_issues.py  final_stability_test.py  fix_summary.py  issues.txt  mlc_config.json  numerical_stability_test.py  optax-0.1.3-py3-none-any.whl  optax-0.1.5.dev0-py3-none-any.whl  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  test.py  test.sh  test_extreme_demonstration.py  test_gamma_zero_equivalence.py  test_integrated_lbfgs_b.py  test_lbfgs_b_comparison.py  test_mutation_setup.py  test_output.txt  test_output_2.txt
.github/: check_conda_sync.py  check_license_headers.py
.github/workflows/: mlc_config.json  notebooks_to_markdown.yml  pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  conf.py  contributors.md  design_docs.md  development.md  gallery.rst  getting_started.ipynb  gradient_accumulation.ipynb  index.rst  meta_learning.ipynb  optax-101.ipynb  pyproject.toml
docs/api/: apply_updates.rst  assignment.rst  combining_optimizers.rst  common_losses.rst  common_optimizers.rst  contrib.rst  control_variates.rst  experimental.rst  general_utilities.rst  linear_algebra_operators.rst  linprog.rst  losses.rst  microbatching.rst  optax_transformations.rst  optimizer_schedules.rst  optimizer_wrappers.rst  optimizers.rst  perturbations.rst  privacy_sensitive.rst  projections.rst  second_order_optimization_utilities.rst  stochastic_gradient_estimators.rst  transformations.rst  tree_utilities.rst  utilities.rst  utilities_for_numerical_stability.rst
docs/examples/: README.rst  datasets.py  differentially_private_sgd.py  flax_example.py  haiku_example.py  index.rst  lookahead_mnist.py  mnist.py  ogda_example.ipynb  quick_start.ipynb
docs/ext/: coverage_check.py
examples/: Optax_MNIST.ipynb  README.md  adversarial_training.ipynb  aggregate.ipynb  cifar10_resnet.ipynb  datasets.py  datasets_test.py  differentially_private_sgd.ipynb  differentially_private_sgd.py  dpsgd_example.py  flax_example.ipynb  flax_example.py  freezing_parameters.ipynb  freezing_parameters_manual_masking.ipynb  gradient_accumulation.ipynb  gradient_accumulation_and_microbatching.ipynb  haiku_example.ipynb  haiku_example.py  lbfgs.ipynb  linear_assignment_problem.ipynb  linear_programming.ipynb  lookahead_mnist.ipynb  lookahead_mnist.py  lookahead_mnist_test.py  meta_learning.ipynb  mlp_mnist.ipynb  mnist.py  mnist_test.py  nanolm.ipynb  ogda_example.ipynb  perturbations.ipynb  pyproject.toml  quick_start.ipynb  sam.ipynb
examples/contrib/: README.md  differentially_private_sgd.ipynb  lnb_mnist.ipynb  muon.ipynb  reduce_on_plateau.ipynb  rosenbrock_ademamix.ipynb  sam.ipynb  schedule_free.ipynb
mutation_testing/: count_mutations.py  generate_report.py  single_file_mutation.py
mutation_testing/results/: mutation_results.json  mutations_diff.txt
mutation_testing_linear_algebra/: MUTATION_TESTING_REPORT.md  SCRIPT_ANALYSIS.md  count_mutations.py  generate_report.py  single_file_mutation.py  verify_script.py
mutation_testing_linear_algebra/results/: mutation_results.json  mutations_diff.txt
mutation_testing_schedule/: MUTATION_TESTING_REPORT.md
optax/: CHANGELOG.md  __init__.py  experimental.py  optax_test.py  tree.py
optax/_src/: alias.py  alias_test.py  base.py  base_test.py  clipping.py  clipping_test.py  combine.py  combine_test.py  complex_valued.py  complex_valued_test.py  constrain.py  constrain_test.py  constraints.py  control_variates.py  control_variates_test.py  deprecations.py  distributed_shampoo.py  distributed_shampoo_test.py  dog.py  dog_test.py  equivalence_test.py  factorized.py  factorized_test.py  float64_test.py  lbfgs_test.py  linear_algebra.py  linear_algebra_test.py  linesearch.py  linesearch_test.py  lookahead.py  lookahead_test.py  loss.py  loss_test.py  numerics.py  numerics_test.py  privacy.py  privacy_test.py  schedule.py  schedule_test.py  second_order.py  (+16 more)
optax/assignment/: __init__.py  _auction_algorithm.py  _auction_algorithm_test.py  _hungarian_algorithm.py  _hungarian_algorithm_test.py
optax/contrib/: _RLion.py  _RLion_test.py  __init__.py  _acprop.py  _acprop_test.py  _adahessian.py  _adahessian_test.py  _ademamix.py  _ademamix_test.py  _adopt.py  _adopt_test.py  _ano.py  _cautious.py  _cautious_test.py  _cocob.py  _cocob_test.py  _common_test.py  _complex_valued.py  _complex_valued_test.py  _cwd.py  _cwd_test.py  _dadapt_adamw.py  _dadapt_adamw_test.py  _dion.py  _dion_test.py  _dog.py  _dog_test.py  _galore.py  _galore_test.py  _hutchinson.py  _hutchinson_test.py  _lion.py  _lion_test.py  _lnb.py  _madgrad.py  _madgrad_test.py  _mars.py  _mars_test.py  _mechanic.py  _mechanic_test.py  (+55 more)
optax/experimental/: README.md  __init__.py  _aggregate_test.py  _aggregating.py  _aggregating_test.py  _microbatching.py  _microbatching_test.py  _sharding.py  _sharding_test.py  aggregate.py  api_test.ipynb  extra_args_test.py  gradient_solver.py  gradient_solver_test.py  microbatching.py  microbatching_test.py  solver.py  utils.py
optax/large_scale/: __init__.py  partitioning_test.py
optax/linprog/: __init__.py  _rhpdhg.py  _rhpdhg_test.py
optax/losses/: __init__.py  _classification.py  _classification_test.py  _contrastive.py  _contrastive_test.py  _fenchel_young.py  _fenchel_young_test.py  _ranking.py  _ranking_test.py  _regression.py  _regression_test.py  _segmentation.py  _segmentation_test.py  _self_supervised.py  _self_supervised_test.py  _semi_supervised.py  _semi_supervised_test.py  _smoothing.py  _smoothing_test.py  classification.py  classification_test.py  ranking_test.py  regression_test.py  segmentation.py  segmentation_test.py  smoothing_test.py
optax/microbatching/: __init__.py  _microbatching.py  _microbatching_test.py  microbatching.py
optax/schedules/: _join.py  (+16 more)
optax_add_eve/: __init__.py  optax_test.py
requirements/: minimum-requirements-dp-accounting.txt  requirements-docs.txt  requirements-examples.txt  requirements-test.txt  requirements.txt
scripts/: check_conda_sync.py
(+127 files in other folders)
